--- a/app/frontend/views/index.phtml
+++ b/app/frontend/views/index.phtml
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Title</title>
+  <title>Web App</title>
 
   <link rel="stylesheet" href="/assets/compiled/bundle.css">
 </head>
